--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <main class="links-container">
             <div class="links">
-                <a href="https://github.com/taisadefante" target="_blank">Github</a>
+                <a href="https://github.com/taisadefante" target="_blank">GitHub</a>
                 <a href="https://www.linkedin.com/in/ta%C3%ADs-defante-54533165/" target="_blank">LinkedIn</a>
                 <a href="https://taisadefante.github.io/Meu_Portfolio_Tais/" target="_blank">Meu Portfolio</a>
                 <button class="modal-active">Contato</button>
